Fix: fixed minor bugs

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@lottiefiles/react-lottie-player": "^3.5.3",
     "@nextui-org/react": "^2.2.10",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -17,6 +18,11 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@tanstack/react-query": "^5.29.2",
+    "@tanstack/react-query-devtools": "^5.29.2",
+    "@web3modal/ethers": "^4.1.9",
+    "@web3modal/wagmi": "^4.1.9",
+    "axios": "^1.6.8",
     "browserlist": "^1.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -27,10 +33,14 @@
     "gsap": "^3.12.5",
     "lottie-web": "^5.12.2",
     "lucide-react": "^0.316.0",
+    "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.51.3",
     "react-icons": "^5.0.1",
     "react-lottie": "^1.2.4",
+    "react-multi-select-component": "^4.3.4",
     "react-player": "^2.14.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.21.3",
@@ -38,8 +48,12 @@
     "slick-carousel": "^1.8.1",
     "swr": "^2.2.4",
     "tailwind-merge": "^2.2.1",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
-    "use-dynamic-refs": "^1.0.0"
+    "use-dynamic-refs": "^1.0.0",
+    "viem": "^2.9.20",
+    "wagmi": "^2.5.20",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.9",
