--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -51,7 +51,7 @@
     "tailwind-merge": "^2.2.1",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
-    "use-dynamic-refs": "^1.0.0",
+    "vaul": "^0.9.0",
     "viem": "^2.9.20",
     "wagmi": "^2.5.20",
     "zod": "^3.22.4",
@@ -62,6 +62,7 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/react-lottie": "^1.2.10",
+    "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
