--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -46,6 +46,7 @@
     "react-router-dom": "^6.21.3",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.7.5",
     "sonner": "^1.4.41",
     "swr": "^2.2.4",
     "tailwind-merge": "^2.2.1",
